--- a/src/App.css
+++ b/src/App.css
@@ -230,3 +230,22 @@ ul {
 .mainPage img {
   width: 200px;
 }
+
+
+/*********************** ALBUM PAGE ********************/
+
+.playBtn{
+  font-size: 2.5em;
+}
+
+.playBtn:hover{
+  color:white;
+}
+
+.likeBtn{
+  font-size: 1.5em;
+}
+
+.likeBtn:hover{
+  color:green;
+}
